# cps

./: .env  .gitignore  Cargo.toml  _  __  diesel.db
migrations/2024-05-18-114347_create_temperatures/: down.sql  up.sql
pigpiod_if-sys/: Cargo.toml
pigpiod_if2-sys/: Cargo.toml  build.rs
scripts/: plot_today.gp
src/: cli.rs  error.rs  lib.rs  main.rs  model.rs  models.rs  pi.rs  prelude.rs  schema.rs  segment_display.rs  shift_register.rs  wrapper.rs
