workspace = { members = ["pigpiod_if2-sys"] }
[package]
name = "cps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
diesel = { version = "2.1.6", default-features = false, features = ["sqlite", "chrono"] }
pigpiod_if2 = { version = "0.1.0", path = "pigpiod_if2-sys", package = "pigpiod_if2-sys" }
