workspace = { members = ["pigpiod_if2-sys"] }
[package]
name = "cps"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
diesel = { version = "2.1.6", default-features = false, features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
pigpiod_if2 = { version = "0.1.0", path = "pigpiod_if2-sys", package = "pigpiod_if2-sys" }
